# slide_maker

./: README.md  pyproject.toml
examples/: config.json
src/slide_maker/: __init__.py  cli.py  config.py  main.py  mcp_server.py  models.py
src/slide_maker/crews/: __init__.py
src/slide_maker/crews/slide_deck_crew/: __init__.py  slide_deck_crew.py
src/slide_maker/crews/slide_deck_crew/config/: agents.yaml  tasks.yaml
src/slide_maker/tools/: chapter_ingest.py  context_chunking.py  deterministic_planner.py  image_assignment.py  pptx_writer.py
tests/: test_pipeline.py
